Fix HTML comments formatting in index.html

--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
                             </div>
                         </div>
                     </div>
-                    <!-- </div> end-content -->
+                    <!-- </div> end-content --
                     <div class="row" style="background-color: #66d4ff">
                         <div class="col-12">
                             <h2>Follow Us</h2>
@@ -454,7 +454,7 @@
                             </p>
                         </div>
                     </div>
-                    <!-- Vendor JS Files -->
+                    <!-- Vendor JS Files --
 
                     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
                     <script src="../orris0/aos.css"></script>
@@ -465,9 +465,9 @@
                     <script src="../orris0/isotope.pkgd.min.js"></script>
                     <script src="../orris0/swiper-bundle.min.js"></script>
                     <script src="../orris0/validate.js"></script>
-                    <!--jQuery JS-->
+                    <!--jQuery JS--
                     <script src="../orris0/js/"></script>
-                    <!-- Template Main JS File -->
+                    <!-- Template Main JS File --
                     <script src="../orris0/main.js"></script>
 
                     <a href="https://orris0.github.io/orris0/membership.html"
@@ -492,7 +492,7 @@
                     </svg>
                     <div class="row">
                         <div class="col-12">
-                            <!-- <div id="header"> -->
+                            <!-- <div id="header"> --
                             <h1>StarTrackr!</h1>
                             <div id="login">
                                 <a href="#">Log in</a>
@@ -510,8 +510,8 @@
                                     </div>
                                 </form>
                             </div>
-                        </div><!-- end-col-12 -->
-                    </div><!-- end-row -->
+                        </div><!-- end-col-12 --
+                    </div><!-- end-row --
 
                     <div class="row">
                         <div class="col-12">
@@ -540,13 +540,13 @@
                                     </li>
                                 </ul>
                             </nav>
-                        </div><!-- end-col-12 -->
-                    </div><!-- end-row -->
+                        </div><!-- end-col-12 --
+                    </div><!-- end-row --
 
                     <div class="row">
                         <div class="col-12">
                             <header data-role="header" class="data" id="html5-ch1-7header">
-                                <!-- <div id="hdr"> changed to <header> -->
+                                <!-- <div id="hdr"> changed to <header> --
                                 <hgroup>
                                     <h1 class="veryimportant heading stuff" id="html5-ch1-7h1">Tourorris Rural Retreats!
                                     </h1>
@@ -556,8 +556,8 @@
                                     <br>Orris
                                 </p>
                             </header>
-                        </div><!-- end-col-12 -->
-                    </div><!-- end-row -->
+                        </div><!-- end-col-12 --
+                    </div><!-- end-row --
 
                     <br class="clear">
                     <div class="row">
@@ -571,7 +571,7 @@
                                     <li><a href="page5.html">Page Five</a></li>
                                 </ul>
                             </div>
-                        </div><!-- end-col-12 -->
+                        </div><!-- end-col-12 --
                     </div><!-- end-row -->
 
                     <div data-role="content" class="data" id="html5-ch1-7content">
