--- a/index.html
+++ b/index.html
@@ -72,11 +72,14 @@
 	<link rel="stylesheet" type="text/css" href="./CSS/grad-pic-text-HTML5.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/gradient-pic.css">
 	
-	
-	
-
-	
-
+	<link rel="stylesheet" type="text/css" href="./CSS/gradient-pic.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/gradient-pic.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/gradient-pic.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/gradient-pic.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/gradient-pic.css">
+    <link rel="stylesheet" type="text/css" href="./CSS/gradient-pic.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/gradient-pic.css">
+    <link rel="stylesheet" type="text/css" href="./CSS/gradient-pic.css">
     <!-- <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css"> 
 		
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
