--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
 	<link rel="stylesheet" type="text/css" href="./CSS/css/index-973f48a9b2be581a2212ac40e3992258a3d10ae46dc49036c6a35.css"> 
 	<link rel="stylesheet" type="text/css" href="./CSS/css/inline-block.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/css/main-style.css">
-	<link rel="stylesheet" type="text/css" href="./CSS/css/nav.css"> 
+	<link rel="stylesheet" type="text/css" href="./CSS/css/nav.css"> -->
 	<link rel="stylesheet" type="text/css" href="./CSS/base.css">
+	<!--
 	<link rel="stylesheet" type="text/css" href="./CSS/bullets.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/churches-style2.css"> 
 	<link rel="stylesheet" type="text/css" href="./CSS/collage-ie.css">
@@ -56,18 +57,21 @@
 	<link rel="stylesheet" type="text/css" href="./CSS/feedback.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/fixed-3d.css"> 
 	<link rel="stylesheet" type="text/css" href="./CSS/fixed-3d.css">
-	<link rel="stylesheet" type="text/css" href="./CSS/fixed.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/fixed.css"> -->
 	<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css"> 
 	
 	<link rel="stylesheet" type="text/css" href="./CSS/font-awesome.css">
+	<!--
 	<link rel="stylesheet" type="text/css" href="./CSS/four-col-no-tables.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/fourside-drop10px.css"> 
 	<link rel="stylesheet" type="text/css" href="./CSS/fourside-drop30px-fullpage.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/fourside-drop30px.css">
+	-->
 	<link rel="stylesheet" type="text/css" href="./CSS/gallery-2col.css"> 
 	<link rel="stylesheet" type="text/css" href="./CSS/gallery-3col-mix.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/gallery-ie7.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/gallery-one-col.css"> 
+	<!--
 	<link rel="stylesheet" type="text/css" href="./CSS/grad-pic-html5.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/grad-pic-text-HTML5.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/gradient-pic.css">
