Clean up stylesheet links in index.html
Removed commented-out stylesheet links and retained active ones.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="style[1].css"> 
     
     <link rel="stylesheet" href="./nav[1].css">
-	<!--
+	
 	<link rel="stylesheet" type="text/css" href="./CSS/css/nav.css"> 
 	<link rel="stylesheet" type="text/css" href="./CSS/css/main-style.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/css/corporate-style.css">
@@ -37,7 +37,7 @@
 	<link rel="stylesheet" type="text/css" href="./CSS/css/index-973f48a9b2be581a2212ac40e3992258a3d10ae46dc49036c6a35.css"> 
 	<link rel="stylesheet" type="text/css" href="./CSS/css/inline-block.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/css/main-style.css">
-	<link rel="stylesheet" type="text/css" href="./CSS/css/nav.css"> -->
+	<link rel="stylesheet" type="text/css" href="./CSS/css/nav.css"> 
 	<link rel="stylesheet" type="text/css" href="./CSS/base.css">
 	<!--
 	<link rel="stylesheet" type="text/css" href="./CSS/bullets.css">
