Remove comment from stylesheet links in index.html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	<link rel="stylesheet" type="text/css" href="./CSS/css/main-style.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/css/nav.css"> 
 	<link rel="stylesheet" type="text/css" href="./CSS/base.css">
-	<!--
+	
 	<link rel="stylesheet" type="text/css" href="./CSS/bullets.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/churches-style2.css"> 
 	<link rel="stylesheet" type="text/css" href="./CSS/collage-ie.css">
@@ -59,7 +59,7 @@
 	<link rel="stylesheet" type="text/css" href="./CSS/feedback.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/fixed-3d.css"> 
 	<link rel="stylesheet" type="text/css" href="./CSS/fixed-3d.css">
-	<link rel="stylesheet" type="text/css" href="./CSS/fixed.css"> -->
+	<link rel="stylesheet" type="text/css" href="./CSS/fixed.css"> 
 	 
 	
 	<link rel="stylesheet" type="text/css" href="./CSS/font-awesome.css">
