--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
 	<link rel="stylesheet" type="text/css" href="./CSS/grad-pic-text-HTML5.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/gradient-pic.css">
 	
-	<link rel="stylesheet" type="text/css" href="./CSS/gradient-pic.css">
-	<link rel="stylesheet" type="text/css" href="./CSS/gradient-pic.css">
-	<link rel="stylesheet" type="text/css" href="./CSS/gradient-pic.css">
-	<link rel="stylesheet" type="text/css" href="./CSS/gradient-pic.css">
-	<link rel="stylesheet" type="text/css" href="./CSS/gradient-pic.css">
-    <link rel="stylesheet" type="text/css" href="./CSS/gradient-pic.css">
-	<link rel="stylesheet" type="text/css" href="./CSS/gradient-pic.css">
-    <link rel="stylesheet" type="text/css" href="./CSS/gradient-pic.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/gradient-style-HTML5.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/gradient-style.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/ie-6-style.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/inset-active.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/jScrollPane.css">
+    <link rel="stylesheet" type="text/css" href="./CSS/jquery.bxslider.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/lightbox.css">
+    <link rel="stylesheet" type="text/css" href="./CSS/liquid-maxmin.css">
     <!-- <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css"> 
 		
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
