--- a/index.html
+++ b/index.html
@@ -85,6 +85,14 @@
 	<link rel="stylesheet" type="text/css" href="./CSS/jScrollPane.css">
     <link rel="stylesheet" type="text/css" href="./CSS/jquery.bxslider.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/lightbox.css">
+
+	<link rel="stylesheet" type="text/css" href="./CSS/liquid.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/main.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/menu_styles.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/menus.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/multiple-css2.css">
+    <link rel="stylesheet" type="text/css" href="./CSS/multiple-css3.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/nav-style.css">
 	
     <link rel="stylesheet" type="text/css" href="./CSS/liquid-maxmin.css">
     <!-- <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css"> 
