Refactor stylesheet links in index.html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
     <link rel="stylesheet" href="style[1].css"> 
     
     <link rel="stylesheet" href="./nav[1].css">
-	
 	<link rel="stylesheet" type="text/css" href="./CSS/css/nav.css"> 
 	<link rel="stylesheet" type="text/css" href="./CSS/css/main-style.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/css/corporate-style.css">
@@ -39,7 +38,6 @@
 	<link rel="stylesheet" type="text/css" href="./CSS/css/main-style.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/css/nav.css"> 
 	<link rel="stylesheet" type="text/css" href="./CSS/base.css">
-	
 	<link rel="stylesheet" type="text/css" href="./CSS/bullets.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/churches-style2.css"> 
 	<link rel="stylesheet" type="text/css" href="./CSS/collage-ie.css">
@@ -59,25 +57,19 @@
 	<link rel="stylesheet" type="text/css" href="./CSS/feedback.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/fixed-3d.css"> 
 	<link rel="stylesheet" type="text/css" href="./CSS/fixed-3d.css">
-	<link rel="stylesheet" type="text/css" href="./CSS/fixed.css"> 
-	 
-	
-	<link rel="stylesheet" type="text/css" href="./CSS/font-awesome.css">
-	
+	<link rel="stylesheet" type="text/css" href="./CSS/fixed.css"> 	
+	<link rel="stylesheet" type="text/css" href="./CSS/font-awesome.css"
 	<link rel="stylesheet" type="text/css" href="./CSS/four-col-no-tables.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/fourside-drop10px.css"> 
 	<link rel="stylesheet" type="text/css" href="./CSS/fourside-drop30px-fullpage.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/fourside-drop30px.css">
-	
 	<link rel="stylesheet" type="text/css" href="./CSS/gallery-2col.css"> 
 	<link rel="stylesheet" type="text/css" href="./CSS/gallery-3col-mix.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/gallery-ie7.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/gallery-one-col.css"> 
-	
 	<link rel="stylesheet" type="text/css" href="./CSS/grad-pic-html5.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/grad-pic-text-HTML5.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/gradient-pic.css">
-	
 	<link rel="stylesheet" type="text/css" href="./CSS/gradient-style-HTML5.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/gradient-style.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/ie-6-style.css">
@@ -93,6 +85,17 @@
 	<link rel="stylesheet" type="text/css" href="./CSS/multiple-css2.css">
     <link rel="stylesheet" type="text/css" href="./CSS/multiple-css3.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/nav-style.css">
+
+	<link rel="stylesheet" type="text/css" href="./CSS/nav.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/nav-style.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/nifty-tabs.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/niftyCorners.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/pay-cards.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/portraits-drop.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/portraits-html5-captions.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/portraits-html5.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/portraits.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/position-video.css">
 	
     <link rel="stylesheet" type="text/css" href="./CSS/liquid-maxmin.css">
     <!-- <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css"> 
