Add multiple CSS stylesheets to index.html

--- a/index.html
+++ b/index.html
@@ -96,8 +96,30 @@
 	<link rel="stylesheet" type="text/css" href="./CSS/portraits-html5.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/portraits.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/position-video.css">
-	
     <link rel="stylesheet" type="text/css" href="./CSS/liquid-maxmin.css">
+
+	<link rel="stylesheet" type="text/css" href="./CSS/print.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/rosette.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/search.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/niftyCorners.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/pay-cards.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/portraits-drop.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/portraits-html5-captions.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/shadow-fullpage-extendable.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/shadow-fullpage.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/shadow-paragraph-8-6b.css">
+
+	<link rel="stylesheet" type="text/css" href="./CSS/shadow-paragraph.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/sliding.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/squares-html5.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/squaretabs.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/starter-page-style-2.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/starter-page-style-3.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/starter-page-style.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/style.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/three-col-no-tables.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/three-colstyle.css">
+	
     <!-- <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css"> 
 		
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
