Remove old CSS links and add new stylesheets

--- a/index.html
+++ b/index.html
@@ -119,6 +119,17 @@
 	<link rel="stylesheet" type="text/css" href="./CSS/style.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/three-col-no-tables.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/three-colstyle.css">
+
+	<link rel="stylesheet" type="text/css" href="./CSS/transparent.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/turquoise.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/two-shadow.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/two-shadowfig10.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/two-shadowtext.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/twocol-print.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/twocol.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/twoshad-whitebdr1.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/twoshad-whitebdr2.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/zebra.css">
 	
     <!-- <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css"> 
 		
