--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <meta name="author" content="Orris Baker">
     <meta property="og:audio:type" content="audio/mpeg">
 	<link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
-	<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
-	<!--
+<!--	<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
+	
     <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
     <!-- Viewport for responsive web design -->
     <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen" charset="utf-8">
