--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
     <script type="text/javascript" src="./jquery.scrollTo.js" charset="utf-8"></script>
     <link rel="stylesheet" href="./style.css"> 
-    <link rel="stylesheet" href="./style[1].css"> 
-    <!--
+<!--    <link rel="stylesheet" href="./style[1].css"> 
+    
     <link rel="stylesheet" href="./nav[1].css">
 	<link rel="stylesheet" type="text/css" href="./CSS/css/nav.css"> 
 	<link rel="stylesheet" type="text/css" href="./CSS/css/main-style.css">
