Refactor index.html structure and content

--- a/index.html
+++ b/index.html
@@ -178,8 +178,113 @@
             <script src="js/html5.js" type="text/javascript"></script>
         <![endif]-->
 </head>
-
 <body>
+	<div>
+        <div id="green" class="box">Go!</div>
+        <div id="red" class="box">Go!</div>
+    </div>
+    <a href="./gran-parents.jpg" class="lightbox">pic</a>
+    <img class="logo" src="./img/flexy-logo.png">
+    <svg version="1.1" baseProfile="full" xmlns="http://www.w3.org/2000/svg" width="500px" height="60px">
+		<text x="20" y="50" style="font-family:times new roman;  font-size:36pt; font-weight:bold; letter-spacing:20px; stroke:black; fill:white; ">TourOrris</text>
+    </svg>
+    <div class="row">
+        <div class="col-12">
+            <!-- <div id="header"> -->
+            <h1>StarTrackr!</h1>
+            <div id="login">
+                <a href="#">Log in</a>
+                <form action="">
+                    <div>
+                        <label for="username">Username:</label>
+                        <input name="username" id="username" type="text" />
+                    </div>
+                    <div>
+                        <label for="password">Password:</label>
+                        <input name="password" id="password" type="password" />
+                    </div>
+                    <div>
+                        <input type="submit" value="Log in!" />
+                    </div>
+                </form>
+            </div>
+        </div><!-- end-col-12 -->
+    </div><!-- end-row -->
+
+    <div class="row">
+        <div class="col-12">
+            <h2>Welcome!</h2>
+            <nav role="navigation">
+                <ul id="menu">
+                    <li><a href="#">What's new?</a>
+                        <ul class="active">
+                            <li><a href="#">Weekly specials</a></li>
+                            <li><a href="#">Last night's pics!</a></li>
+                            <li><a href="#">Users' comments</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">Member extras</a>
+                        <ul>
+                            <li><a href="#">Premium Celebrities</a></li>
+                            <li><a href="#">24-hour Surveillance</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">About Us</a>
+                        <ul>
+                            <li><a href="#">Privacy Statement</a></li>
+                            <li><a href="#">Terms and Conditions</a></li>
+                            <li><a href="#">Contact Us</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
+        </div><!-- end-col-12 -->
+    </div><!-- end-row -->
+
+    <div class="row">
+        <div class="col-12">
+            <header data-role="header" class="data" id="html5-ch1-7header">
+                <!-- <div id="hdr"> changed to <header> -->
+                <hgroup>
+                    <h1 class="veryimportant heading stuff" id="html5-ch1-7h1">Tourorris Rural Retreats!</h1>
+                    <h2 class="heading"><strong>StarTrackr!</strong></h2>
+                </hgroup>
+                <p>We returned to a ransacked house, even the furniture was taken.<br> Your friend,
+                    <br>Orris
+                </p>
+            </header>
+        </div><!-- end-col-12 -->
+    </div><!-- end-row -->
+
+    <br class="clear">
+    <div class="row">
+        <div class="col-12">
+            <div id="hnav">
+                <ul>
+                    <li><a href="index.html">Home Page</a></li>
+                    <li><a class="active" href="page2.html">Page Two</a></li>
+                    <li><a href="page3.html">Page Three with a long label</a></li>
+                    <li><a href="page4.html">Page Four</a></li>
+                    <li><a href="page5.html">Page Five</a></li>
+                </ul>
+            </div>
+        </div><!-- end-col-12 -->
+    </div><!-- end-row -->
+
+    <div data-role="content" class="data" id="html5-ch1-7content">
+        <b>
+            <p id="no-script">We recommend that you have JavaScript enabled!</p>
+        </b>
+        <p><img title="Koala" alt="Koala" height="165" src="images/Koalasmall.jpg" width="220"></p>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <div class="row">
+            <div class="col-12">
+                <img src="img/kite.png">
+                <h2>Welcome!</h2>
+            </div>
+	<!--
     <div class="wrapper">
         <img class="logo" src="./img/flexy-logo.png">
         <div class="row">
@@ -195,27 +300,27 @@
                         <li><a href="./starter-page.html">Specials</a></li>
                         <li><a href="./index[1].html">Blog</a></li>
                         <li><a href="./index2.html">Products</a></li>
-                        <!-- <li><a href="./creating-a-website.html">Create-a-website</a></li> -->
+                        <!-- <li><a href="./creating-a-website.html">Create-a-website</a></li> --
                     </ul>
                 </nav>
-            </div><!-- end-col-12 -->
-        </div><!-- end-row -->
+            </div><!-- end-col-12 --
+        </div><!-- end-row --
         <br class="clear">
 
         <div class="row">
             <div class="col-12">
                 <header data-role="header" class="data" id="html5-ch1-7header">
-                    <!-- <div id="hdr"> changed to <header> -->
+                    <!-- <div id="hdr"> changed to <header> --
                     <hgroup>
                         <h1 class="veryimportant heading stuff" id="html5-ch1-7h1">Tourorris Rural Retreats!</h1>
-                        <!-- <h2 class="heading"><strong>StarTrackr!</strong></h2> -->
+                        <!-- <h2 class="heading"><strong>StarTrackr!</strong></h2> --
                     </hgroup>
                     <p>We returned to a ransacked house, even the furniture was taken.<br> Your friend,
                         <br>Orris
                     </p>
                 </header>
-            </div><!-- end-col-12 -->
-        </div><!-- end-row -->
+            </div><!-- end-col-12 --
+        </div><!-- end-row --
         <br class="clear">
 
         <div class="row">
@@ -236,22 +341,22 @@
                                     width="300">
                                 <br>
                                 The superb interior of one of our cottages
-                            </div><!-- end_left-col -->
-                            <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
-                                <ul><!--start of menu list-->
+                            </div><!-- end_left-col --
+                            <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>--
+                                <ul><!--start of menu list--
                                     <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
                                     <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
                                     <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
                                     <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
                                     <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
-                                </ul><!--end of menu list-->
+                                </ul><!--end of menu list--
                             </nav>
-                            <!--</div> removed and replaced with </nav>-->
+                            <!--</div> removed and replaced with </nav>--
                             <div class="data" id="html5style2midcol">
                                 <h3>Situated in the BDA's beautiful countryside</h3>
                                 <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
                             </div>
-                        </div><!-- end-col-12 -->
+                        </div><!-- end-col-12 --
                     </div><!-- end-.row -->
                     <br class="clear">
 
@@ -534,116 +639,6 @@
                             <p>&copy; Kite-It.</p>
                         </div>
                     </div>
-
-
-                    <div>
-                        <div id="green" class="box">Go!</div>
-                        <div id="red" class="box">Go!</div>
-                    </div>
-                    <a href="./gran-parents.jpg" class="lightbox">pic</a>
-                    <img class="logo" src="./img/flexy-logo.png">
-                    <svg version="1.1" baseProfile="full" xmlns="http://www.w3.org/2000/svg" width="500px"
-                        height="60px"><text x="20" y="50" style="font-family:times new roman; 
-               font-size:36pt; font-weight:bold; letter-spacing:20px; stroke:black; fill:white; ">TourOrris</text>
-                    </svg>
-                    <div class="row">
-                        <div class="col-12">
-                            <!-- <div id="header"> --
-                            <h1>StarTrackr!</h1>
-                            <div id="login">
-                                <a href="#">Log in</a>
-                                <form action="">
-                                    <div>
-                                        <label for="username">Username:</label>
-                                        <input name="username" id="username" type="text" />
-                                    </div>
-                                    <div>
-                                        <label for="password">Password:</label>
-                                        <input name="password" id="password" type="password" />
-                                    </div>
-                                    <div>
-                                        <input type="submit" value="Log in!" />
-                                    </div>
-                                </form>
-                            </div>
-                        </div><!-- end-col-12 --
-                    </div><!-- end-row --
-
-                    <div class="row">
-                        <div class="col-12">
-                            <h2>Welcome!</h2>
-                            <nav role="navigation">
-                                <ul id="menu">
-                                    <li><a href="#">What's new?</a>
-                                        <ul class="active">
-                                            <li><a href="#">Weekly specials</a></li>
-                                            <li><a href="#">Last night's pics!</a></li>
-                                            <li><a href="#">Users' comments</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="#">Member extras</a>
-                                        <ul>
-                                            <li><a href="#">Premium Celebrities</a></li>
-                                            <li><a href="#">24-hour Surveillance</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="#">About Us</a>
-                                        <ul>
-                                            <li><a href="#">Privacy Statement</a></li>
-                                            <li><a href="#">Terms and Conditions</a></li>
-                                            <li><a href="#">Contact Us</a></li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </nav>
-                        </div><!-- end-col-12 --
-                    </div><!-- end-row --
-
-                    <div class="row">
-                        <div class="col-12">
-                            <header data-role="header" class="data" id="html5-ch1-7header">
-                                <!-- <div id="hdr"> changed to <header> --
-                                <hgroup>
-                                    <h1 class="veryimportant heading stuff" id="html5-ch1-7h1">Tourorris Rural Retreats!
-                                    </h1>
-                                    <h2 class="heading"><strong>StarTrackr!</strong></h2>
-                                </hgroup>
-                                <p>We returned to a ransacked house, even the furniture was taken.<br> Your friend,
-                                    <br>Orris
-                                </p>
-                            </header>
-                        </div><!-- end-col-12 --
-                    </div><!-- end-row --
-
-                    <br class="clear">
-                    <div class="row">
-                        <div class="col-12">
-                            <div id="hnav">
-                                <ul>
-                                    <li><a href="index.html">Home Page</a></li>
-                                    <li><a class="active" href="page2.html">Page Two</a></li>
-                                    <li><a href="page3.html">Page Three with a long label</a></li>
-                                    <li><a href="page4.html">Page Four</a></li>
-                                    <li><a href="page5.html">Page Five</a></li>
-                                </ul>
-                            </div>
-                        </div><!-- end-col-12 --
-                    </div><!-- end-row -->
-
-                    <div data-role="content" class="data" id="html5-ch1-7content">
-                        <b>
-                            <p id="no-script">We recommend that you have JavaScript enabled!</p>
-                        </b>
-                        <p><img title="Koala" alt="Koala" height="165" src="images/Koalasmall.jpg" width="220"></p>
-                        <p>&nbsp;</p>
-                        <p>&nbsp;</p>
-                        <p>&nbsp;</p>
-                        <div class="row">
-                            <div class="col-12">
-                                <img src="img/kite.png">
-                                <h2>Welcome!</h2>
-                            </div>
-
                             <div class="row">
                                 <div class="col-12" style="padding: 2%;">
                                     <div id="banner">
