--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         <div id="green" class="box">Go!</div>
         <div id="red" class="box">Go!</div>
     </div>
-    <a href="./gran-parents.jpg" class="lightbox">pic</a>
+   <!-- <a href="./gran-parents.jpg" class="lightbox">pic</a> -->
     <img class="logo" src="./img/flexy-logo.png">
     <svg version="1.1" baseProfile="full" xmlns="http://www.w3.org/2000/svg" width="500px" height="60px">
 		<text x="20" y="50" style="font-family:times new roman;  font-size:36pt; font-weight:bold; letter-spacing:20px; stroke:black; fill:white; ">TourOrris</text>
