--- a/index.html
+++ b/index.html
@@ -179,68 +179,68 @@
         <![endif]-->
 </head>
 <body>
-	<div>
-        <div id="green" class="box">Go!</div>
-        <div id="red" class="box">Go!</div>
-    </div>
-   <!-- <a href="./gran-parents.jpg" class="lightbox">pic</a> -->
-    <img class="logo" src="./img/flexy-logo.png">
-    <svg version="1.1" baseProfile="full" xmlns="http://www.w3.org/2000/svg" width="500px" height="60px">
-		<text x="20" y="50" style="font-family:times new roman;  font-size:36pt; font-weight:bold; letter-spacing:20px; stroke:black; fill:white; ">TourOrris</text>
-    </svg>
-    <div class="row">
-        <div class="col-12">
-            <!-- <div id="header"> -->
-            <h1>StarTrackr!</h1>
-            
-			<div id="login">
-                <a href="#">Log in</a>
-                <form action="">
-                    <div>
-                        <label for="username">Username:</label>
-                        <input name="username" id="username" type="text" />
-                    </div>
-                    <div>
-                        <label for="password">Password:</label>
-                        <input name="password" id="password" type="password" />
-                    </div>
-                    <div>
-                        <input type="submit" value="Log in!" />
-                    </div>
-                </form>
-            </div>
-			
-        </div><!-- end-col-12 -->
-    </div><!-- end-row -->
-
-    <div class="row">
-        <div class="col-12">
-            <h2>Welcome!</h2>
-            <nav role="navigation">
-                <ul id="menu">
-                    <li><a href="#">What's new?</a>
-                        <ul class="active">
-                            <li><a href="#">Weekly specials</a></li>
-                            <li><a href="#">Last night's pics!</a></li>
-                            <li><a href="#">Users' comments</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">Member extras</a>
-                        <ul>
-                            <li><a href="#">Premium Celebrities</a></li>
-                            <li><a href="#">24-hour Surveillance</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">About Us</a>
-                        <ul>
-                            <li><a href="#">Privacy Statement</a></li>
-                            <li><a href="#">Terms and Conditions</a></li>
-                            <li><a href="#">Contact Us</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </nav>
-        </div><!-- end-col-12 -->
+	<div class="wrapper">
+        <img class="logo" src="./img/flexy-logo.png">
+	    <div>
+            <div id="green" class="box">Go!</div>
+            <div     id="red" class="box">Go!</div>
+        </div>
+        <!-- <a href="./gran-parents.jpg" class="lightbox">pic</a> -->
+        <img class="logo" src="./img/flexy-logo.png">
+        <svg version="1.1" baseProfile="full" xmlns="http://www.w3.org/2000/svg" width="500px" height="60px">
+		    <text x="20" y="50" style="font-family:times new roman;  font-size:36pt; font-weight:bold; letter-spacing:20px; stroke:black; fill:white; ">TourOrris</text>
+        </svg>
+        <div class="row">
+            <div class="col-12">
+                <!-- <div id="header"> -->
+                <h1>StarTrackr!</h1>
+			    <div id="login">
+                    <a href="#">Log in</a>
+                    <form action="">
+                        <div>
+                            <label for="username">Username:</label>
+                            <input name="username" id="username" type="text" />
+                        </div>
+                        <div>
+                            <label for="password">Password:</label>
+                            <input name="password" id="password" type="password" />
+                        </div>
+                        <div>
+                            <input type="submit" value="Log in!" />
+                        </div>
+                    </form>
+                </div>			
+            </div><!-- end-col-12 -->
+        </div><!-- end-row -->
+	
+        <div class="row">
+            <div class="col-12">
+                <h2>Welcome!</h2>
+                <nav role="navigation">
+                    <ul id="menu">
+                        <li><a href="#">What's new?</a>
+                            <ul class="active">
+                                <li><a href="#">Weekly specials</a></li>
+                                <li><a href="#">Last night's pics!</a></li>
+                                <li><a href="#">Users' comments</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">Member extras</a>
+                            <ul>
+                                <li><a href="#">Premium Celebrities</a></li>
+                                <li><a href="#">24-hour Surveillance</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">About Us</a>
+                            <ul>
+                                <li><a href="#">Privacy Statement</a></li>
+                                <li><a href="#">Terms and Conditions</a></li>
+                                <li><a href="#">Contact Us</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </nav>
+            </div><!-- end-col-12 -->
     </div><!-- end-row -->
 
     <div class="row">
@@ -286,11 +286,10 @@
                 <img src="img/kite.png">
                 <h2>Welcome!</h2>
             </div>
-	<!--
-    <div class="wrapper">
-        <img class="logo" src="./img/flexy-logo.png">
+	
+    
         <div class="row">
-            <div class="col-12">
+      <!--      <div class="col-12">
                 <nav role="navigation" class="data" id="nav">
                     <input class="trigger" type="checkbox" id="mainNavButton">
                     <label for="mainNavButton" onclick>Menu</label>
@@ -583,8 +582,8 @@
                             </div>
                         </div>
                     </div>
-                    <!-- </div> end-content --
-                    <div class="row" style="background-color: #66d4ff">
+                     </div> end-content --
+                <!--    <div class="row" style="background-color: #66d4ff">
                         <div class="col-12">
                             <h2>Follow Us</h2>
                         </div>
@@ -1071,10 +1070,9 @@
                                         class="bi bi-arrow-up-short"></i></a>
                             </div><!-- end-content -->
                         </div><!-- end container -->
-            </div><!-- end wrapper -->
-        </div>
+                </div><!-- end content -->
+		</div><!-- end-wrapper -->
     </body><!-- end body  -->
-
 </html>
 
 
