--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         <img class="logo" src="./img/flexy-logo.png">
 	    <div>
             <div id="green" class="box">Go!</div>
-            <div     id="red" class="box">Go!</div>
+            <div id="red" class="box">Go!</div>
         </div>
         <!-- <a href="./gran-parents.jpg" class="lightbox">pic</a> -->
         
@@ -277,7 +277,7 @@
         <b>
             <p id="no-script">We recommend that you have JavaScript enabled!</p>
         </b>
-        <p><img title="Koala" alt="Koala" height="165" src="images/Koalasmall.jpg" width="220"></p>
+        <p><img title="Koala" alt="Koala" height="165" src="./gran-parents.jpg" width="220"></p>
         <p>&nbsp;</p>
         <p>&nbsp;</p>
         <p>&nbsp;</p>
