--- a/index.html
+++ b/index.html
@@ -178,10 +178,12 @@
     <body>
 	    <div class="wrapper">
             <img class="logo" src="./img/flexy-logo.png">
+			<!--
 	        <div>
                 <div id="green" class="box">Go!</div>
                 <div id="red" class="box">Go!</div>
             </div>
+			-->
             <!-- <a href="./gran-parents.jpg" class="lightbox">pic</a> -->
         
             <svg version="1.1" baseProfile="full" xmlns="http://www.w3.org/2000/svg" width="500px" height="60px">
@@ -190,7 +192,7 @@
             <div class="row">
                 <div class="col-12">
                     <!-- <div id="header"> -->
-                    <h1>StarTrackr!</h1>
+                    <h1>Practical HTML5 Projects for fun and Profit</h1>
 			        <div id="login">
                         <a href="#">Log in</a>
                         <form action="">
