--- a/index.html
+++ b/index.html
@@ -191,28 +191,25 @@
             </svg>
             <div class="row">
                 <div class="col-12">
-                    <!-- <div id="header"> -->
-                    <h1>Practical HTML5 Projects for fun and Profit</h1>
-			        <div id="login">
+                    <div id="login">
                         <a href="#">Log in</a>
                         <form action="">
-                            <div>
-                                <label for="username">Username:</label>
-                                <input name="username" id="username" type="text" />
-                            </div>
-                            <div>
-                                <label for="password">Password:</label>
-                                <input name="password" id="password" type="password" />
-                            </div>
-                        <div>
-                            <input type="submit" value="Log in!" />
-                        </div>
-                    </form>
-                </div>			
-            </div><!-- end-col-12 -->
-        </div><!-- end-row -->
-	
-        <div class="row">
+                                <div>
+                                    <label for="username">Username:</label>
+                                    <input name="username" id="username" type="text" />
+                                </div>
+                                <div>
+                                    <label for="password">Password:</label>
+                                    <input name="password" id="password" type="password" />
+                                </div>
+                                <div>
+                                    <input type="submit" value="Log in!" />
+                                </div>
+                            </form>
+                        </div>   			
+                    </div><!-- end-col-12 -->
+                </div><!-- end-row -->
+                <div class="row">
             <div class="col-12">
                 
                 <nav role="navigation">
@@ -248,7 +245,7 @@
                 <header data-role="header" class="data" id="html5-ch1-7header">
                     <!-- <div id="hdr"> changed to <header> -->
                     <hgroup>
-                        <h1 class="veryimportant heading stuff" id="html5-ch1-7h1">Tourorris Rural Retreats!</h1>
+                        <h1 class="veryimportant heading stuff" id="html5-ch1-7h1">Practical HTML5 Projects for fun and Profit</h1>
                         <h2 class="heading"><strong>StarTrackr!</strong></h2>
                     </hgroup>
                     <p>We returned to a ransacked house, even the furniture was taken.<br> Your friend,
