--- a/index.html
+++ b/index.html
@@ -2,17 +2,32 @@
 <html ng-app lang="en">
     <head profile="http://www.w3.org/2005/10/profile">
         <title>Gallery-page-Templates</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta charset="utf-8">
+	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="google-adsense-account" content="ca-pub-9639638377144073">
-        <meta property="og:title" content="A Basic HTML5 Template">
+	    <meta property="og:title" content="A Basic HTML5 Template">
         <meta property="og:type" content="website">
         <meta property="og:audio:type" content="audio/mpeg">
         <meta property="og:description" content="The abuse and mistreatment @ The BRC residential center, breaking-ground, The Travellers Hotel, The Andrews, The Kelly.">
         <meta property="og:image" content="image.png">
         <meta name="keywords" content="HTML5, Node.js, Jquery">
         <meta name="author" content="Orris Baker">
-        <meta property="og:audio:type" content="audio/mpeg">
+	    <meta property="og:audio:type" content="audio/mpeg"> 
+        <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
+        <!-- Viewport for responsive web design -->
+	    <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
+        <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+        <script type="text/javascript" src="./js/scripts.js"></script>
+        <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
+        <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
+	    <link rel="stylesheet" href="./style.css"> 
+        <link rel="stylesheet" href="./style[1].css"> 
+        <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
+	    <link rel="stylesheet" href="./nav[1].css">
+        <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
+		<!--
+        
+		
 	    <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
 	    <link rel="stylesheet" type="text/css" href="./CSS/gallery-2col.css"> 
 	    <link rel="stylesheet" type="text/css" href="./CSS/gallery-3col-mix.css">
