--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <![endif]-->
     </head>
     <body>
-	    <div class="wrapper">
+	    <!-- <div class="wrapper"> -->
             <img class="logo" src="./img/flexy-logo.png">
 			<div class="row">
                 <div class="col-12">
