--- a/news.html
+++ b/news.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:ng-app lang="en">
 	<head>
-	<!-- Required meta tags -->
-	<title>Integrating Innovation-News</title>
-	<meta charset=utf-8>
+	    <!-- Required meta tags -->
+	    <title>Integrating Innovation-News</title>
+	    <meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="google-adsense-account" content="ca-pub-9639638377144073">
 	    <meta property="og:title" content="A Basic HTML5 Template">
