--- a/index.html
+++ b/index.html
@@ -128,8 +128,9 @@
 	    <link rel="stylesheet" type="text/css" href="./CSS/shadow-paragraph-8-6b.css">
 
 	    <link rel="stylesheet" type="text/css" href="./CSS/sliding.css">
-	    <link rel="stylesheet" type="text/css" href="./CSS/squares-html5.css">
+	    <link rel="stylesheet" type="text/css" href="./CSS/squares-html5.css"> -->
 	    <link rel="stylesheet" type="text/css" href="./CSS/squaretabs.css">
+		<!--
 	    <link rel="stylesheet" type="text/css" href="./CSS/starter-page-style-2.css">
 	    <link rel="stylesheet" type="text/css" href="./CSS/starter-page-style-3.css">
 	    <link rel="stylesheet" type="text/css" href="./CSS/starter-page-style.css">
@@ -288,7 +289,6 @@
             <div class="row">
                 <div class="col-12">
                     <img src="img/kite.png">
-                    <h2>Welcome!</h2>
                 </div>
 		    </div>
 			
