--- a/about.html
+++ b/about.html
@@ -71,6 +71,7 @@
             <script src="js/html5.js" type="text/javascript"></script>
         <![endif]-->
 </head>
+<body>
 <img class="logo" src="./img/flexy-logo.png">
         <div class="row">
             <div class="col-12">
