--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -135,7 +135,7 @@
         <![endif]-->
     </head>
     <body>
-		<div class="wrapper">
+	<!-- 	<div class="wrapper"> -->
 			<img class="logo" src="./img/flexy-logo.png">
 		    <svg version="1.1" baseProfile="full" xmlns="http://www.w3.org/2000/svg" width="500px" height="60px"><text x="20" y="50" style="font-family:times new roman; 
                 font-size:36pt; font-weight:bold; letter-spacing:20px; stroke:black; fill:white; ">TourOrris</text>
@@ -174,6 +174,132 @@
 				
 			<!--close top section - content area starts -->
 			<div class="data" id="html5-style-2content">
+
+                    <div class="row">
+                        <div class="çol-12">
+                            <img src="img/kite.png">
+                            <div class="data" id="html5style2leftcol">
+                                <h3>Cottages, converted barns, caravans</h3>
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
+                                <br>
+                                The superb interior of one of our cottages
+                            </div><!-- end_left-col -->
+                            <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
+                                <ul><!--start of menu list-->
+                                    <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
+                                    <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
+                                    <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
+                                    <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
+                                    <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
+                                </ul><!--end of menu list-->
+                            </nav>
+                            <!--</div> removed and replaced with </nav>-->
+                            <div class="data" id="html5style2midcol">
+                                <h3>Situated in the BDA's beautiful countryside</h3>
+                                <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
+                            </div>
+                        </div><!-- end-col-12 -->
+                    </div><!-- end-.row -->
+                    <br class="clear">
+
+                    <div class="row">
+                        <div class="çol-12" padding="2%">
+                            <h2 class="dark" id="html5-ch1-7h2">Welcome to <strong>StarTrackr!</strong> </h2>
+                        </div><!-- end-col-12 -->
+                    </div><!-- end-row -->
+                    <br class="clear">
+                    <div class="row" style="background-color: #3C8886; padding: 5% 0 3%;">
+                        <div class="çol-12">
+                            <img src="img/paper.png">
+                            <br>
+                            <div class="data" id="html5style2leftcol">
+                                <h3>Cottages, converted barns, caravans</h3>
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-1.jpg" width="300">
+                                <br>
+                                The superb interior of one of our cottages
+                            </div><!-- end_left-col -->
+                            <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
+                                <ul><!--start of menu list-->
+                                    <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
+                                    <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
+                                    <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
+                                    <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
+                                    <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
+                                </ul><!--end of menu list-->
+                            </nav>
+                            <!--</div> removed and replaced with </nav>-->
+                            <div class="data" id="html5style2midcol">
+                                <h3>Situated in the BDA's beautiful countryside</h3>
+                                <img title="Devon countryside" alt="Devon countryside" src="./bda-2.jpg" height="229" width="398">
+                            </div>
+                        </div><!-- end-col-12 -->
+                    </div><!-- end-.row -->
+                    <br class="clear">
+
+                    <div class="row" style="background-color: #F6931E;">
+                        <div class="col-11">
+                            <h2>Get ready for take off.</h2>
+                            <br>
+                            <div class="data" id="html5style2leftcol">
+                                <h3>Cottages, converted barns, caravans</h3>
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-3.jpg" width="300">
+                                <br>
+                                The superb interior of one of our cottages
+                            </div><!-- end_left-col -->
+                            <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
+                                <ul><!--start of menu list-->
+                                    <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
+                                    <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
+                                    <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
+                                    <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
+                                    <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
+                                </ul><!--end of menu list-->
+                            </nav>
+                            <!--</div> removed and replaced with </nav>-->
+                            <div class="data" id="html5style2midcol">
+                                <h3>Situated in the BDA's beautiful countryside</h3>
+                                <img title="Devon countryside" alt="Devon countryside" src="./bda-4.jpg" height="229" width="398">
+                            </div>
+                        </div><!-- end-col-12 -->
+                    </div><!-- end-.row -->
+                    <br class="clear">
+                            <div class="col-3">
+                                <img class="circle" src="img/orange-globe.png">
+                            </div> <!-- end col-3 -->
+                        </div><!-- end col-11 -->
+                    </div> <!-- end class row -->
+
+                    <br class="clear">
+                    <div class="row" style="background-color: #1abc9c;">
+                        <div class="col-10">
+                            <h2>We're flying around the globe</h2>
+                            <div class="data" id="html5style2leftcol">
+                                <h3>Cottages, converted barns, caravans</h3>
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-5.jpg" width="300">
+                                <br>
+                                The superb interior of one of our cottages
+                            </div><!-- end_left-col -->
+                            <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
+                                <ul><!--start of menu list-->
+                                    <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
+                                    <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
+                                    <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
+                                    <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
+                                    <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
+                                </ul><!--end of menu list-->
+                            </nav>
+                            <!--</div> removed and replaced with </nav>-->
+                            <div class="data" id="html5style2midcol">
+                                <h3>Situated in the BDA's beautiful countryside</h3>
+                                <img title="Devon countryside" alt="Devon countryside" src="./bda-6.jpg" height="229" width="398">
+                            </div>
+                        </div><!-- end-col-12 -->
+                    </div><!-- end-.row -->
+                    <br class="clear">
+
+
+
+
 		        <div class="row">
                     <div class="çol-12" padding="2%">
                         <h2 class="dark"> Award winning accommodation, self catering or bed and breakfast</h2>
