--- a/index.html
+++ b/index.html
@@ -289,7 +289,41 @@
                 <p id="no-script">We recommend that you have JavaScript enabled!</p>
             </b>
             <p><img title="Koala" alt="Koala" height="165" src="./gran-parents.jpg" width="220"></p>
-            <p>&nbsp;</p>
+            <div class="thermometer-widget">
+ <div class="title">Donation Thermometer</div>
+ <div class="cause">A Good Cause</div>
+ <div class="figures">
+ <div class="goal">
+ <span class="label">Our Goal</span>
+ <span class="value">&pound;5,000</span>
+ </div>
+ <div class="current_total">
+ <span class="label">Raised so far</span>
+ <span class="value">&pound;3,000</span>
+ </div>
+ </div>
+ </div>
+<span class="value">&pound;5,000</span>
+ </div>
+ <div class="current_total">
+ <span class="label">Raised so far</span>
+ <span class="value">&pound;3,000</span>
+ </div>
+ </div>
+ <div class="display">
+ <div class="thermometer">
+ <div class="top"></div>
+ <div class="middle">
+ <div class="value"></div>
+ </div>
+ <div class="base current_total">
+ <div class="value">&pound;3,000</div>
+ </div>
+<!-- CHAPTER 9: HACKING HTML5 CONNECTIVITY 369 -->
+ </div>
+ </div>
+ </div>
+
             <p>&nbsp;</p>
             <p>&nbsp;</p>
                     <div class="row">
